--- a/examples/grid/index.html
+++ b/examples/grid/index.html
@@ -5,7 +5,8 @@
     <title>Vue.js grid component example</title>
     <link rel="stylesheet" href="style.css">
     <!-- Delete ".min" for console warnings in development -->
-    <script src="../../dist/vue.min.js"></script>
+    <!-- 默认引入vue.min.js，为了方便调试，引入vue.js-->
+    <script src="../../dist/vue.js"></script>
     </head>
   <body>
 
